crates/ditto-cst/tests/golden/parse-errors/bad_package_name.ditto
module Test exports (..)

import (foo_bar) Foo.Bar
